crates/gestalt-cli/tests/snapshots/h3b_snapshot_tests__profiles_list_error.snap
---
source: crates/gestalt-cli/tests/h3b_snapshot_tests.rs
expression: "snapshot_string(&error_json(\"CONFIG_ERROR\", \"profile catalog unavailable\",\nfalse))"
---
{
  "data": null,
  "error": {
    "code": "CONFIG_ERROR",
    "correlation_id": null,
    "details": null,
    "message": "profile catalog unavailable",
    "retryable": false
  },
  "kind": "error",
  "schema_version": 1,
  "status": "error",
  "warnings": []
}
