crates/gestalt-cli/tests/snapshots/h3b_snapshot_tests__providers_list_error.snap
---
source: crates/gestalt-cli/tests/h3b_snapshot_tests.rs
expression: "snapshot_string(&error_json(\"PROVIDER_ERROR\", \"provider catalog unavailable\",\ntrue))"
---
{
  "data": null,
  "error": {
    "code": "PROVIDER_ERROR",
    "correlation_id": null,
    "details": null,
    "message": "provider catalog unavailable",
    "retryable": true
  },
  "kind": "error",
  "schema_version": 1,
  "status": "error",
  "warnings": []
}
