crates/gestalt-cli/tests/snapshots/h3b_snapshot_tests__providers_list_success.snap
---
source: crates/gestalt-cli/tests/h3b_snapshot_tests.rs
expression: snapshot_string(&success_json(&report))
---
{
  "data": {
    "providers": [
      "anthropic",
      "openai",
      "openai-compatible"
    ]
  },
  "error": null,
  "kind": "providers.list",
  "schema_version": 1,
  "status": "success",
  "warnings": []
}
